--- a/Styles/about.css
+++ b/Styles/about.css
@@ -62,7 +62,7 @@
     margin-top: 1px;
 }
   .body {
-      background-image: url(/Media/bgcar.jpg);
+      background-image: url(/Labb1_EricF/Media/bgcar.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: 100% 100%;
